--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
 
     <script src="main.js" type="module"></script>
 
+    <button text="Make AI move" onclick="make_ai_move()"></button>
+    <br/>
+    <br/>
     <canvas id="hobo_canvas" width="1000" height="1000"></canvas>
   </body>
 </html>
